# Registration-Verification-System

./: README.md  pyproject.toml
src/: main.py
src/app/ai/: agent.py  tools.py
src/app/config/: config.py
src/app/tools/: __init__.py  document_service.py  payment_service.py  registration_service.py  reminder_service.py
src/app/utils/: database_utils.py
